Modified receipt and register templates

--- a/spareParts/templates/spare/register.html
+++ b/spareParts/templates/spare/register.html
@@ -9,6 +9,6 @@
     <h2>Register Here!</h2>
 
     {{form | crispy }}
-     <input type="submit" name="Register" class="btn btn-info btn-primary btn-block">
+     <input type="submit" name="Register" class="btn btn-info btn-primary btn-block" type="button">
 </form>
 {% endblock %}
